--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1846,7 +1846,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
             Warning: parent nodes missing a label are labeled by             all child elements,
             causing screen readers to announce every child and often making a tree so verbose that it is unusable.
           </li>
-          <li>If the tre supports selection of more than one node, the element with role <code>tree</code> has <a class="property-reference" href="#aria-multiselectable">aria-multiselectable</a> set to <code>true</code>. Otherwise, <code>aria-multiselectable</code> is either set to <code>false</code> or the default value of <code>false</code> is implied.</li>
+          <li>If the tree supports selection of more than one node, the element with role <code>tree</code> has <a class="property-reference" href="#aria-multiselectable">aria-multiselectable</a> set to <code>true</code>. Otherwise, <code>aria-multiselectable</code> is either set to <code>false</code> or the default value of <code>false</code> is implied.</li>
           <li>If the tree does not support multiple selection, <a href="#aria-selected" class="property-reference">aria-selected</a> is set to <code>true</code> for the selected node and it is not present on any other node in the tree.</li>
           <li>if the tree supports multiple selection:
           <ul>
