--- a/examples/alert/index.html
+++ b/examples/alert/index.html
@@ -17,6 +17,11 @@
 
     <main>
       <h1>ARIA <code>alert</code> Role Example</h1>
+      <p>
+        <strong>Note:</strong>
+        This page requires updates per <a href="https://github.com/w3c/aria-practices/issues/185">issue 185.</a>
+        Please provide any additional feedback in this issue.
+      </p>
 
       <p>This example shows a simple alert after you click the button.</p>
 
