Editorial revisions to breadcrumb pattern
modified:   aria-practices.html:
In breadcrumb design pattern, made revisions to fix issues described in issue #186.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -289,39 +289,29 @@
 
     <section class="widget" id="breadcrumb">
       <h3 class="widget-name">Breadcrumb</h3>
-
       <p>
-        A breadcrumb consists of a list of links to the parent pages of the current page in hierarchical order.
-        These help users find their place within a website or web application.
+        A breadcrumb trail consists of a list of links to the parent pages of the current page in hierarchical order.
+        It helps users find their place within a website or web application.
         Breadcrumbs are often placed horizontally before a page's main content.
       </p>
-
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
-
         <p>Not applicable.</p>
       </section>
-
       <section class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
-          <li>Breadcrumb trail is contained within a navigation landmark.</li>
-          <li>The widget should be labelled programmatically via a heading or via either <a href="#aria-label" class="property-reference">aria-label</a> or <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>.</li>
+          <li>Breadcrumb trail is contained within a navigation landmark region.</li>
+          <li>The landmark region is labelled via <a href="#aria-label" class="property-reference">aria-label</a> or <a href="#aria-labelledby" class="property-reference">aria-labelledby</a>.</li>
           <li>
             The link to the current page has <a href="#aria-current" class="property-reference">aria-current</a> set to <code>page</code>.
             If the element representing the current page is not a link, aria-current is optional.
           </li>
         </ul>
       </section>
-
       <section class="notoc">
         <h4>Example</h4>
-
-        <ul>
-          <li>
-            <a href="examples/breadcrumb/index.html">Breadcrumb design pattern example</a>
-          </li>
-        </ul>
+        <p><a href="examples/breadcrumb/index.html">Breadcrumb design pattern example</a></p>
       </section>
     </section>
 
