Add issue 187 link to breadcrumb example page
modified:   examples/breadcrumb/index.html:
This page requires some revisions.
Added a link to issue 187 to call attention to needed updates and   to capture any additional feedback.

--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -10,7 +10,11 @@
   <body>
     <main>
       <h1>ARIA Breadcrumb Design Pattern Example</h1>
-
+      <p>
+        This page requires updates per 
+        <a href="https://github.com/w3c/aria-practices/issues/187">issue 187.</a>
+        Please provide any additional feedback in this issue.
+      </p>
       <p>This example shows the <a href="../../aria-practices.html#breadcrumb">breadcrumb design pattern</a>.</p>
 
 	  <p>
