--- a/aria-practices.html
+++ b/aria-practices.html
@@ -317,7 +317,6 @@
 
     <section class="widget" id="button">
       <h3>Button</h3>
-
       <p>
         A <a class="role-reference" href="#button">button</a> is a widget that enables users to trigger an action or event, such as submitting a form, opening a dialog, canceling an action, or performing a delete operation.
         A common convention for informing users that a button launches a dialog is to append &quot;&#8230;&quot; (ellipsis) to the button label, e.g., &quot;Save as&#8230;&quot;.
@@ -329,64 +328,76 @@
           To tell assistive technologies that a button is a toggle button, specify a value for the attribute <a href="#aria-pressed" class="state-reference">aria-pressed</a>.
           For example, a button labeled mute in an audio player could indicate that sound is muted by setting the pressed state true.
           <strong>Important:</strong> it is critical the label on a toggle does not change when its state changes.
-          In this example, when the pressed state is true, the label should remain “Mute” so a screen reader will say something like “Mute toggle button pressed”. 
+          In this example, when the pressed state is true, the label remains “Mute” so a screen reader would say something like “Mute toggle button pressed”. 
           Alternatively, if the design were to call for the button label to change from “Mute” to “Unmute,” the aria-pressed attribute would not be needed.
         </li>
-        <li>Menu button: as described in the <a href="#menubutton">menu button pattern</a>, a button will be revealed to assistive technologies as a menu button if it has the property <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set true.</li>
+        <li>Menu button: as described in the <a href="#menubutton">menu button pattern</a>, a button is revealed to assistive technologies as a menu button if it has the property <a href="#aria-haspopup" class="property-reference">aria-haspopup</a> set to <code>true</code>.</li>
       </ul>
       <p class="note">
         The types of actions performed by buttons are distinctly different from the function of a link (see <a href="#link">link pattern</a>).
-        It is important that the role of a widget matches the function it provides.
-        Ideally, the role of the element also matches its visual appearance.
-        But, occasionally an element may be visually styled as an icon or link but perform the action of a button.
-        In these cases, the element should be given a button role.
-        Designers should work to avoid conflicts between visual appearance and WAI-ARIA semantics.
+        It is important that both the appearance and role of a widget match the function it provides.
+        Nevertheless, elements occasionally have the visual style of a link but perform the action of a button.
+        In such cases, giving the element role <code>button</code> helps assistive technology users understand the function of the element.
+        However, a better solution is to adjust the visual design so it matches the function and ARIA role.
       </p>
-
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
-        <p>
-          With focus on the button, pressing the <kbd>Space</kbd> key or <kbd>Enter</kbd> key activates the button.
-          Focus should behave appropriately for the type of action being performed.
-          For example:
-        </p>
+        <p>When the button has focus:</p>
         <ul>
           <li>
-            If activating the button opens a dialog, the focus moves inside the dialog.
-            (see <a href="#dialog_nonmodal">dialog pattern</a>)
+            <kbd>Space</kbd>: Activates the button.
           </li>
           <li>
-            If activating the button closes a dialog, typically focus should return to the button that opened the dialog unless the function performed in the dialog context logically leads to a different element.
-            For example, activating a cancel button in a dialog should always return focus to the button that opened the dialog.
-            However, if the dialog is confirming a delete action that deletes the page from which it was opened, the focus must logically move to a new context.
+            <kbd>Enter</kbd>: Activates the button.
           </li>
-          <li>If activating the button does not dismiss the current context, then focus should typically remain on the button after activation, e.g., an Apply or Recalculate button.</li>
-          <li>If the button action indicates a context change, such as move to next step in a wizard or add another search criteria, then it may be appropriate to move focus to the starting point for that action.</li>
           <li>
-            If the button is activated with a shortcut key, the focus should usually remain in the context from which the shortcut key was activated.
-            For example, if <kbd>Alt + U</kbd> were assigned to an &quot;Up&quot; button that moves the currently focused item in a list one position higher in the list, pressing <kbd>Alt + U</kbd> when the focus is in the list should not move the focus from the list.
+            Following button activation, focus is set depending on the type of action the button
+            performs. For example:
+            <ul>
+              <li>
+                If activating the button opens a dialog, the focus moves inside the dialog. (see
+                <a href="#dialog_modal">dialog pattern</a>)
+              </li>
+              <li>If activating the button closes a dialog, focus typically returns to the
+                button that opened the dialog unless the function performed in the dialog context
+                logically leads to a different element. For example, activating a cancel button in a
+                dialog returns focus to the button that opened the dialog. However, if
+                the dialog were confirming the action of deleting the page from which it was
+                opened, the focus would logically move to a new context.</li>
+              <li>If activating the button does not dismiss the current context, then focus
+                typically remains on the button after activation, e.g., an Apply or
+                Recalculate button.</li>
+              <li>If the button action indicates a context change, such as move to next step in
+                a wizard or add another search criteria, then it is often appropriate to move focus to
+                the starting point for that action.</li>
+              <li>
+                If the button is activated with a shortcut key, the focus usually remains in
+                the context from which the shortcut key was activated. For example, if <kbd>Alt
+                  + U</kbd> were assigned to an &quot;Up&quot; button that moves the currently focused
+                item in a list one position higher in the list, pressing <kbd>Alt + U</kbd> when the
+                focus is in the list would not move the focus from the list.
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
-
       <section class="notoc">
         <h4>WAI-ARIA Roles, States, and Properties</h4>
         <ul>
           <li>The button has role of <a class="role-reference" href="#button">button</a>.</li>
           <li>
-            An accessible label is required.
+            The <code>button</code> has an accessible label.
             By default, the accessible name is computed from any text content inside the button element.
             However, it can also be provided with <a href="#aria-labelledby" class="property-reference">aria-labelledby"</a> or <a href="#aria-label" class="property-reference">aria-label</a>.
           </li>
           <li>If a description of the button's function is present, the button element has <a href="#aria-describedby" class="property-reference">aria-describedby</a> set to the ID of the element containing the description.</li>
-          <li>When the action associated with a button is unavailable, the button displays in a <a class="state-reference" href="#aria-disabled">aria-disabled</a> state. </li>
+          <li>When the action associated with a button is unavailable, the button has <a class="state-reference" href="#aria-disabled">aria-disabled</a> set to <code>true</code>.</li>
           <li>
             If the button is a toggle button, it has an <a href="#aria-pressed" class="state-reference">aria-pressed</a> state.
-            When the button is toggled, the value of this state is <code>true</code>, and when not toggled, the state is <code>false</code>.
+            When the button is toggled on, the value of this state is <code>true</code>, and when toggled off, the state is <code>false</code>.
           </li>
         </ul>
       </section>
-
       <section class="notoc">
         <h4>Example</h4>
         <p><a href="examples/button/button.html">Button role examples</a></p>
