Link to new checkbox example pages provided by @jongund
modified aria-practices.html:
Updated link targets and link names in the checkbox design pattern example subsection
to point to the new versions of the checkbox examples
provided by @jongund in  pull request #184.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -453,11 +453,11 @@
         <h4>Examples</h4>
         <ul>
           <li>
-            <a href="examples/checkbox/checkbox-1.html">Simple Two-State Checkbox Example</a>: Demonstrates a simple 2-state checkbox.
+            <a href="examples/checkbox/checkbox-1/checkbox-1.html">Simple Two-State Checkbox Example</a>: Demonstrates a simple 2-state checkbox.
           </li>
           <li>
-            <a href="examples/checkbox/checkbox-2.html">Tri-State Checkbox With Grouping Label Examples</a>:
-            three example implementations that demonstrate how to make a widget that uses the <code>mixed</code> value for <code>aria-checked</code> and also show three different ways of labeling a collection of checkboxes so screen reader users can perceive that all members of the collection are part of a logical group.
+            <a href="examples/checkbox/checkbox-2/checkbox-2.html">Tri-State Checkbox Example</a>:
+            Demonstrates how to make a widget that uses the <code>mixed</code> value for <code>aria-checked</code> and group collection of checkboxes with a field set.
           </li>
         </ul>
       </section>
