--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -102,7 +102,7 @@
           </tbody>
         </table>
 
-         <h2 id="kb2_label" class="widget">Popup Menu Widget</h2>
+         <h3 id="kb2_label" class="widget">Popup Menu Widget</h3>
 
         <table aria-labelledby="kbd2_label kbd_label"> 
           <thead>
@@ -260,7 +260,7 @@
           </tbody>
         </table> 
 
-        <h3 id="rps2_label">Popup Menu Widget</h3>
+        <h3 id="rps2_label">Popup Menu</h3>
 
         <table aria-labelledby="rps2_label rps_label">
           <thead>
