--- a/examples/menu-button/menu-button-2/menu-button-2.html
+++ b/examples/menu-button/menu-button-2/menu-button-2.html
@@ -117,7 +117,7 @@
           </tbody>
         </table>
 
-         <h2 id="kb2_label" class="widget">Popup Menu Widget</h2>
+         <h3 id="kb2_label" class="widget">Popup Menu</h3>
 
         <table aria-labelledby="kbd2_label kbd_label"> 
           <thead>
