updated link to other example

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -31,7 +31,7 @@
 
   <p>Similar examples include: </p>
   <ul>
-    <li><a href="../menubar-2/menubar-2.html">Action Menubar Example</a>: Example of a menubar with text styling actions.</li>
+    <li><a href="../menubar-2/menubar-2.html">Editor Menubar Example</a>: Example of a menubar with text styling actions similar to an editor application.</li>
   </ul>
 
   <section id="code-ex-1">
