updated example links

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3430,14 +3430,16 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
       <h3>
         <code>presentation</code> role examples
       </h3>
-      <p>
-        The
+      <ul>
+        <li>The
         <a href="examples/presentation/PresentationRoleExamples.html">
           <code>presentation</code> role examples page
         </a>
         illustrates the effects of these rules in a variety of scenarios and provides more detailed
-        explanations of the rationale behind them.
-      </p>
+        explanations of the rationale behind them.</li>
+        <li><a href="examples/menu-button/menu-button-2/menu-button-2.html">Menu Button Example: links</a>
+        <li><a href="examples/menubar/menubar-1/menubar-1.html">Navigation Menubar Example</a>
+      </ul>
     </section>
   </section>
   
