--- a/aria-practices.html
+++ b/aria-practices.html
@@ -20,7 +20,19 @@
     <p>This document is part of the WAI-ARIA suite described in the <a href="http://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a>.</p>
   </section>
 
-  <section id="sotd"></section>
+  <section id="sotd">
+  	<p>This is a <a href="https://www.w3.org/2015/Process-20150901/#RecsWD">Working Draft</a> by the <a href="http://www.w3.org/WAI/ARIA/">Accessible Rich Internet Applications Working Group</a> of the <a href="http://www.w3.org/WAI/">Web Accessibility Initiative</a>. It supports the <a href="http://www.w3.org/TR/wai-aria-1.1/" class="specref">WAI-ARIA 1.1</a> [<cite><a href="#bib-WAI-ARIA" class="bibref">WAI-ARIA</a></cite>] specification, providing detailed advice and examples beyond what would be appropriate to a technical specification but which are important to understand the specification. This version includes additional refinements to the authoring guidance.</p>
+  	<p>Feedback on the  information provided here is essential to the ultimate success of Rich Internet Applications that afford full access to their information and operations. The Accessible Rich Internet Applications Working Group asks in particular:</p>
+  	<ul>
+  		<li>Is it clear how to create accessible Rich Internet Applications?</li>
+  		<li>Is the usage of roles, states, and properties clear? </li>
+  		<li>Are the various types of rich Web content covered? </li>
+  		<li>Are considerations beyond the use of WAI-ARIA sufficiently explained? </li>
+  		<li>Is the relationship of this document to the WAI-ARIA specification clear? </li>
+  		<li>Are the <a href="#aria_ex">design patterns</a> clear?</li>
+  	</ul>
+  	<p> To comment, <a href="https://github.com/w3c/aria-practices/issues/">file an issue in the <abbr title="World Wide Web Consortium">W3C</abbr> ARIA GitHub repository</a>, or if that is not possible, send email to <a href="mailto:public-aria@w3.org?subject=Comment%20on%20WAI-ARIA%20Practices%201.1">public-aria@w3.org</a> (<a href="http://lists.w3.org/Archives/Public/public-aria/">comment archive</a>). Comments are requested by <strong>27 January 2017</strong>. In-progress updates to the document may be viewed in the <a href="http://w3c.github.io/aria-practices/">publicly visible editors' draft</a>.</p>
+  </section>
 
   <section id="intro">
     <h2>Introduction</h2>
