Link to issue 65 from Grid and Table Properties section
modified aria-practices.html:
Added a link to issue 65 at the beginning of the section:
Grid and Table Properties.
This is a placeholder section.
Issue 65 is to draft content for it.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -3316,7 +3316,10 @@ helper.stopEvent(evt); //stop the event if not a tab keypress
 
   <section id="gridAndTableProperties">
     <h2>Grid and Table Properties</h2>
-
+    <p>
+      Drafting content for this section is 
+      <a href="https://github.com/w3c/aria-practices/issues/65">issue 65.</a>
+    </p>
     <p>
       [placeholder].
       This section will cover colcount, rowcount, colindex, rowindex, colspan, rowspan, and sort.
